# numopt4j

./: .gitignore  CMakeLists.txt  README.md  SKILL_MAVEN_NATIVE_RELEASE.md  llms-full.txt  llms.txt  pom.xml
.github/workflows/: build.yml  release.yml  wiki.yml
src/main/java/com/curioloop/: Bound.java  ConstraintFunction.java  Evaluation.java  LbfgsbOptimizer.java  LbfgsbWorkspace.java  NativeLibraryLoader.java  NumericalGradient.java  ObjectiveFunction.java  OptimizationException.java  OptimizationResult.java  OptimizationStatus.java  SlsqpOptimizer.java  SlsqpWorkspace.java  Termination.java
src/main/java/com/curioloop/numopt4j/linalg/: Decomposer.java  Decomposition.java  Regression.java  Regressor.java
src/main/java/com/curioloop/numopt4j/optim/: Bound.java  FindRoot.java  Minimize.java  Minimizer.java  Multivariate.java  NumericalGradient.java  NumericalJacobian.java  Optimization.java  OptimizationException.java  OptimizationFailure.java  OptimizationProblem.java  OptimizationResult.java  OptimizationStatus.java  Problem.java  RootFinder.java  Univariate.java
src/main/java/com/curioloop/numopt4j/quad/: Checks.java  Integral.java  Integrator.java  Quadrature.java  Trajectory.java
src/main/native/include/: jni_bridge.h  optimizer.h
src/main/native/src/: blas.c  jni_bridge.c  utils.c
src/main/native/src/lbfgsb/: cauchy.c  lbfgsb.c  linesearch.c  linpack.c  minpack.c  project.c  subspace.c  update.c
src/main/native/src/slsqp/: hfti.c  householder.c  ldp.c  lsei.c  lsq.c  nnls.c  slsqp.c
src/main/resources/native/darwin-aarch64/: .gitkeep
src/main/resources/native/darwin-x86_64/: .gitkeep
src/main/resources/native/linux-x86_64/: .gitkeep
src/main/resources/native/windows-x86_64/: .gitkeep
src/test/java/com/curioloop/: ApiUsabilityTest.java  BackwardCompatibilityProperties.java  CallbackExceptionProperties.java  LargeConstraintStabilityProperties.java  LbfgsbIntegrationTest.java  NumericalGradientTest.java  SlsqpIntegrationTest.java  WorkspaceReuseProperties.java
src/test/java/com/curioloop/numopt4j/linalg/: DecomposerTest.java  LeastSquaresTest.java  RegressorTest.java
src/test/java/com/curioloop/numopt4j/optim/: ApiUsabilityTest.java  HYBRBenchmark.java  JacobianMethodProperties.java  LbfgsbIntegrationTest.java  (+5 more)
wiki/: DIMENSION_MISMATCH.md  Home.md  INVALID_INPUT.md  INVALID_VALUE.md  MISSING_PARAM.md
(+402 files in other folders)
